--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -19,4 +19,6 @@
 
 <br>
 
-<button (click)="openDialog()">Modify room (todo)</button>
+<div id="modifyButtonDiv">
+  <button id="modifyButton" mat-button (click)="openDialog()">Modify room (todo)</button>
+</div>
