--- a/src/app/modify-room-dialog/modify-room-dialog.component.html
+++ b/src/app/modify-room-dialog/modify-room-dialog.component.html
@@ -48,5 +48,5 @@
 
 <mat-dialog-actions>
   <button mat-button (click)="applyChanges()">Apply Changes</button>
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button mat-dialog-close>Exit</button>
 </mat-dialog-actions>
