--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -20,5 +20,5 @@
 <br>
 
 <div id="modifyButtonDiv">
-  <button id="modifyButton" mat-button (click)="openDialog()">Modify room (todo)</button>
+  <button id="modifyButton" mat-button (click)="openDialog()">Modify Room</button>
 </div>
