--- a/src/app/create-room-dialog/create-room-dialog.component.html
+++ b/src/app/create-room-dialog/create-room-dialog.component.html
@@ -5,7 +5,7 @@
   <div>
   <span class="field">id:</span>
   <mat-form-field appearance="fill">
-    <input [formControl]="idControl" matInput>
+    <input [formControl]="idControl" readonly matInput>
   </mat-form-field>
   </div>
 
