--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<h2>Booking App</h2>
+<div id="titleDiv">
+  <h2>Booking App</h2>
+</div>
 
-<nav>
+
+<nav id="navDiv">
   <a routerLink="/entities">Bookable Items</a>
   <a routerLink="/profile">Profile</a>
 </nav>
