--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,10 @@
-<p><a routerLink="/">←</a></p>
+<div id="profileMain">
+  <p><a routerLink="/">←</a></p>
 
-<p>Name: John</p>
-<p>Surname: McBar</p>
-<p>Role: Software Engineer</p>
-<p><a href="#">logout</a></p>
+  <p>Name: John</p>
+  <p>Surname: McBar</p>
+  <p>Role: Software Engineer</p>
+  <p><a href="#">logout</a></p>
+</div>
+
+
