--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -1,24 +1,26 @@
-<p class="backLink" (click)="goBack()">← go back to rooms</p>
+<div id="roomDetailMain">
+  <p class="backLink" (click)="goBack()">← go back to rooms</p>
 
-<h3>Room {{id}} -- {{room?.name}}</h3>
+  <h3>Room {{id}} -- {{room?.name}}</h3>
 
-<div>
-  <span>Capacity: {{room?.capacity}}</span> | <span>Display: {{room?.display ? 'yes' : 'no'}}</span> |
-  <span>Whiteboard: {{room?.whiteboard ? 'yes' : 'no'}}</span> |
-  <span>Air conditioning: {{room?.airConditioning ? 'yes' : 'no'}}</span>
-</div>
+  <div>
+    <span>Capacity: {{room?.capacity}}</span> | <span>Display: {{room?.display ? 'yes' : 'no'}}</span> |
+    <span>Whiteboard: {{room?.whiteboard ? 'yes' : 'no'}}</span> |
+    <span>Air conditioning: {{room?.airConditioning ? 'yes' : 'no'}}</span>
+  </div>
 
-<br>
-<br>
+  <br>
+  <br>
 
-<app-select-time-frame (newBookingEvent)="handleNewBookingEvent3($event)"></app-select-time-frame>
+  <app-select-time-frame (newBookingEvent)="handleNewBookingEvent3($event)"></app-select-time-frame>
 
-<br>
+  <br>
 
-<app-room-current-bookings [room$]="room$"></app-room-current-bookings>
+  <app-room-current-bookings [room$]="room$"></app-room-current-bookings>
 
-<br>
+  <br>
 
-<div id="modifyButtonDiv">
-  <button id="modifyButton" mat-button (click)="openDialog()">Modify Room</button>
+  <div id="modifyButtonDiv">
+    <button id="modifyButton" mat-button (click)="openDialog()">Modify Room</button>
+  </div>
 </div>
