Let user modify bookings.

--- a/src/app/modify-room-dialog/modify-room-dialog.component.html
+++ b/src/app/modify-room-dialog/modify-room-dialog.component.html
@@ -44,6 +44,14 @@
     </mat-form-field>
   </div>
 
+  <div id="bookingsDiv">
+    <span class="field">Bookings:</span>
+    <div id="bookingsTextAreaDiv">
+      <textarea [formControl]="bookingsControl" name="bookingsInput" id="" cols="30" rows="10"></textarea>
+    </div>
+  </div>
+
+
 </mat-dialog-content>
 
 <mat-dialog-actions>
