--- a/src/app/modify-room-dialog/modify-room-dialog.component.html
+++ b/src/app/modify-room-dialog/modify-room-dialog.component.html
@@ -3,45 +3,39 @@
 <mat-dialog-content>
 
   <div>
-  <span class="field">id:</span>
+  <span class="field">ID:</span>
   <mat-form-field appearance="fill">
     <input matInput readonly value="{{data['id']}}">
   </mat-form-field>
   </div>
 
   <div>
-    <span class="field">name:</span>
+    <span class="field">Name:</span>
     <mat-form-field appearance="fill">
       <input [formControl]="modifiedNameControl" matInput>
     </mat-form-field>
   </div>
 
   <div>
-    <span class="field">capacity:</span>
+    <span class="field">Capacity:</span>
     <mat-form-field appearance="fill">
-      <input [formControl]="modifiedCapacityControl" matInput>
+      <input type="number" [formControl]="modifiedCapacityControl" matInput>
     </mat-form-field>
   </div>
 
   <div>
-    <span class="field">display:</span>
-    <mat-form-field appearance="fill">
-      <input [formControl]="modifiedDisplayControl" matInput>
-    </mat-form-field>
+    <span class="field">Display:</span>
+    <mat-checkbox [formControl]="modifiedDisplayControl"></mat-checkbox>
   </div>
 
   <div>
-    <span class="field">whiteboard:</span>
-    <mat-form-field appearance="fill">
-      <input [formControl]="modifiedWhiteBoardControl" matInput>
-    </mat-form-field>
+    <span class="field">Whiteboard:</span>
+        <mat-checkbox [formControl]="modifiedWhiteBoardControl"></mat-checkbox>
   </div>
 
   <div>
     <span class="field">Air conditioning:</span>
-    <mat-form-field appearance="fill">
-      <input [formControl]="modifiedAirConditioningControl" matInput>
-    </mat-form-field>
+    <mat-checkbox [formControl]="modifiedAirConditioningControl"></mat-checkbox>
   </div>
 
   <div id="bookingsDiv">
@@ -55,6 +49,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="applyChanges()">Apply Changes</button>
+  <button mat-button mat-dialog-close (click)="applyChanges()">Apply Changes</button>
   <button mat-button mat-dialog-close>Exit</button>
 </mat-dialog-actions>
