Rename form controls.
Rename form controls.

--- a/src/app/modify-room-dialog/modify-room-dialog.component.html
+++ b/src/app/modify-room-dialog/modify-room-dialog.component.html
@@ -12,30 +12,30 @@
   <div>
     <span class="field">Name:</span>
     <mat-form-field appearance="fill">
-      <input [formControl]="modifiedNameControl" matInput>
+      <input [formControl]="nameControl" matInput>
     </mat-form-field>
   </div>
 
   <div>
     <span class="field">Capacity:</span>
     <mat-form-field appearance="fill">
-      <input type="number" [formControl]="modifiedCapacityControl" matInput>
+      <input type="number" [formControl]="capacityControl" matInput>
     </mat-form-field>
   </div>
 
   <div>
     <span class="field">Display:</span>
-    <mat-checkbox [formControl]="modifiedDisplayControl"></mat-checkbox>
+    <mat-checkbox [formControl]="displayControl"></mat-checkbox>
   </div>
 
   <div>
     <span class="field">Whiteboard:</span>
-        <mat-checkbox [formControl]="modifiedWhiteBoardControl"></mat-checkbox>
+        <mat-checkbox [formControl]="whiteBoardControl"></mat-checkbox>
   </div>
 
   <div>
     <span class="field">Air conditioning:</span>
-    <mat-checkbox [formControl]="modifiedAirConditioningControl"></mat-checkbox>
+    <mat-checkbox [formControl]="airConditioningControl"></mat-checkbox>
   </div>
 
   <div id="bookingsDiv">
