Change send request button style.

--- a/src/app/select-time-frame/select-time-frame.component.html
+++ b/src/app/select-time-frame/select-time-frame.component.html
@@ -15,6 +15,6 @@
                           &&
             selectedTimeEndControl.value">
   <div>
-    <button (click)="handleInput()">Send Request</button>
+    <button mat-button mat-stroked-button color="primary" (click)="handleInput()">Send Request</button>
   </div>  
 </div>
