Create dialogue to modify room using a formGroup.
Create dialogue to modify room using a formGroup.

--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -29,5 +29,6 @@
 
   <div id="buttons">
     <button id="modifyButton" mat-button mat-stroked-button color="primary" (click)="openDialog()">Modify Room</button>
+    <button id="modifyButton2" mat-button mat-stroked-button color="primary" (click)="openDialog2()">Modify Room 2</button>
     <button id="deleteButton" mat-button mat-stroked-button color="primary" (click)="openDeleteDialog()">Delete Room</button>
   </div>
