Add max validator for capacity control in modify-room-dialog2.

--- a/src/app/modify-room-dialog2/modify-room-dialog2.component.html
+++ b/src/app/modify-room-dialog2/modify-room-dialog2.component.html
@@ -20,6 +20,7 @@
       <mat-form-field appearance="fill">
         <input type="number" formControlName="capacityControl" matInput>
       </mat-form-field>
+      <span class="sideFeedback" *ngIf="fg.controls['capacityControl'].errors?.['max']">Num is too big...</span>
     </div>
 
     <div>
