--- a/src/app/modify-room-dialog2/modify-room-dialog2.component.css
+++ b/src/app/modify-room-dialog2/modify-room-dialog2.component.css
@@ -1,4 +1,15 @@
+.field {
+  display: inline-block;
+  min-width: 150px;
+}
+
 .sideFeedback {
     margin: 0.5em;
     color: red;
+}
+
+#errorGeneralMessageDiv {
+    margin: 1em;
+    color: red;
+    text-align: center;
 }
