--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -28,7 +28,8 @@
   </div> -->
 
   <div id="buttons">
-    <button id="modifyButton" mat-button mat-stroked-button color="primary" (click)="openDialog()">Modify Room</button>
-    <button id="modifyButton2" mat-button mat-stroked-button color="primary" (click)="openDialog2()">Modify Room 2</button>
+    <button class="modifyButton" mat-button mat-stroked-button color="primary" (click)="openDialog()">Modify Room</button>
+    <button class="modifyButton" mat-button mat-stroked-button color="primary" (click)="openDialog2()">Modify Room 2</button>
+    <button class="modifyButton" mat-button mat-stroked-button color="primary" (click)="openDialog3()">Modify Room 3</button>
     <button id="deleteButton" mat-button mat-stroked-button color="primary" (click)="openDeleteDialog()">Delete Room</button>
   </div>
