--- a/src/app/create-modify-room-dialog/create-modify-room-dialog.component.css
+++ b/src/app/create-modify-room-dialog/create-modify-room-dialog.component.css
@@ -2,3 +2,14 @@
   display: inline-block;
   min-width: 150px;
 }
+
+.sideFeedback {
+    margin: 0.5em;
+    color: red;
+}
+
+#errorGeneralMessageDiv {
+    margin: 1em;
+    color: red;
+    text-align: center;
+}
