--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -19,6 +19,16 @@
 
   <br>
 
+
+
+
+
+  <app-room-card *ngFor="let r of filteredRooms" [room]="r"
+                 [selected]="selected"></app-room-card>
+
+
+
+
   <mat-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}">
     <div class="matHeader">
       <mat-checkbox align="end" [checked]="selected &&selected.includes(r.id)" (click)="stopProp($event)"
