Add checkbox functionality to room card component.

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -24,7 +24,7 @@
 
 
   <app-room-card *ngFor="let r of filteredRooms" [room]="r"
-                 [selected]="selected"></app-room-card>
+                 [selected]="selected" (checkboxEvent)="handleCheckBoxEvent($event)"></app-room-card>
 
 
 
