--- a/src/app/room-card/room-card.component.html
+++ b/src/app/room-card/room-card.component.html
@@ -4,9 +4,7 @@
       <!-- <mat-checkbox align="end" [checked]="selected &&selected.includes(r.id)" (click)="stopProp($event)"
            (change)="handleCheckBoxChange($event, r.id)"></mat-checkbox> -->
       <mat-checkbox align="end" [checked]="room && selected && selected.includes(room.id)"
-                    (click)="test($event)"
-
-                    ></mat-checkbox>
+                    (change)="handleCheckBoxChange($event, room?room.id:null)" (click)="stopProp($event)"></mat-checkbox>
     </div>
 
   <mat-card-title>
