--- a/src/app/room-card/room-card.component.html
+++ b/src/app/room-card/room-card.component.html
@@ -38,7 +38,7 @@
   </mat-card-subtitle>
 
   <mat-card-actions align="end">
-    <!-- <button mat-stroked-button color="primary" (click)="modifyRoom($event, r.id)">Modify room</button> -->
+    <button mat-stroked-button color="primary" (click)="handleModifyButtonClick($event)">Modify room</button>
   </mat-card-actions>
 
 </mat-card>
