--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -17,7 +17,7 @@
 
   <br>
 
-  <app-room-card *ngFor="let r of filteredRooms" routerLink="/rooms/{{r.id}}" [room]="r"
+  <app-room-card *ngFor="let r of filteredRooms" [room]="r"
                  [selected]="selected" (checkboxEvent)="handleCheckBoxEvent($event)"></app-room-card>
 
 </div>
