Let server deal with room ids creation.

--- a/src/app/create-modify-room-dialog/create-modify-room-dialog.component.html
+++ b/src/app/create-modify-room-dialog/create-modify-room-dialog.component.html
@@ -4,12 +4,12 @@
 <mat-dialog-content>
 
   <form [formGroup]="fg" (ngSubmit)="fgSubmit()">
-    <div>
-      <span class="field">id:</span>
-      <mat-form-field appearance="fill">
-        <input formControlName="id"  type="number" readonly matInput>
-      </mat-form-field>
-    </div>
+    <!-- <div> -->
+    <!--   <span class="field">id:</span> -->
+    <!--   <mat-form-field appearance="fill"> -->
+    <!--     <input formControlName="id"  type="number" readonly matInput> -->
+    <!--   </mat-form-field> -->
+    <!-- </div> -->
 
     <div>
       <span class="field">Name:</span>
