--- a/src/app/room-card/room-card.component.html
+++ b/src/app/room-card/room-card.component.html
@@ -6,7 +6,7 @@
     </div>
 
   <mat-card-title>
-    Room {{ _room?.id }} -- {{ _room?.name }}
+    {{ _room?.name }} Room
   </mat-card-title>
 
   <mat-card-subtitle *ngIf="_room">
