--- a/src/app/room-detail/room-detail.component.html
+++ b/src/app/room-detail/room-detail.component.html
@@ -1,7 +1,7 @@
 <div id="roomDetailMain">
   <p class="backLink" (click)="goBack()">← go back to rooms</p>
 
-  <h3>Room {{id}} -- {{room?.name}}</h3>
+  <h3>{{room?.name}} Room</h3>
 
   <div>
     <span>Capacity: {{room?.capacity}}</span> | <span>Display: {{room?.display ? 'yes' : 'no'}}</span> |
